k8s/front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-service
  labels:
    app: kube-kitchen
    section: front
spec:
  selector:
    job: waiter
  ports:
    - port: 80
      protocol: TCP
