k8s/front/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-ingress
  labels:
    app: kube-kitchen
    section: front
    job: maitred
spec:
  backend:
    serviceName: front-service
    servicePort: 80
